--- a/app/src/main/res/layout/activity_add_phone_number.xml
+++ b/app/src/main/res/layout/activity_add_phone_number.xml
@@ -38,15 +38,15 @@
         android:orientation="vertical">
 
         <TextView
+            style="@style/Label.SansSerif"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/Label.SansSerif"
-            android:textColor="@color/white"
             android:layout_marginStart="32dp"
-            android:layout_marginEnd="32dp"
             android:layout_marginTop="32dp"
-            android:textSize="14sp"
-            android:text="@string/increase_your_account_sec"/>
+            android:layout_marginEnd="32dp"
+            android:text="@string/increase_your_account_sec"
+            android:textColor="@color/white"
+            android:textSize="14sp" />
 
         <LinearLayout
             android:id="@+id/enter_phone_number_layout"
